--- a/upload.html
+++ b/upload.html
@@ -5,13 +5,12 @@
 		<title>StArPl - Neu erstellen</title>
 		<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-		<script src="https://raw.githubusercontent.com/blueimp/jQuery-File-Upload/master/js/jquery.fileupload.js"></script>
-		<script src="js/fileinput.min.js"></script>
+		<script src="js/fileinput.min.js"></script> <!-- 4.4.3-5 -->
 		<script src="js/own.js"></script>
 		<link rel="icon" href="img/icon.ico">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css">
-		<link rel="stylesheet" href="css/fileinput.css">
+		<link rel="stylesheet" href="css/fileinput.min.css"> <!-- 4.4.3-5 -->
 		<link rel="stylesheet" href="css/own.css">
 	</head>
 	<body>
@@ -20,7 +19,7 @@
 			<h2><span class="glyphicon glyphicon-file"></span> StudienArbeitenPlattform</h2>
 		</div>
 		<div class="center-block box-content">
-			<form method="post" action="./index.html" name="formUpload" id="formUpload" onsubmit="return upload();">
+			<form method="post" action="./php/upload.php" name="formUpload" id="formUpload" onsubmit="return upload();" enctype="multipart/form-data">
 				<h3>Hochladen von Arbeiten</h3>
 				<div class="form-group">
 					<div class="input-group">
@@ -80,20 +79,23 @@
 						<input class="form-control" id="jahrgang" name="jahrgang" placeholder="Jahrgang" pattern="[0-9]{4}" required />
 					</div>
 				</div>
-				<!-- <div class="form-group"> -->
-					<!-- <input id="fileupload" type="file" name="files[]" required > -->
-				<!-- </div> -->
 				<div class="form-group">
+					<input id="FileInputUploadArbeit" name="FileInputUploadArbeit[]" type="file" class="file-loading" required />
+				</div>
+				<!-- <div class="form-group">
+					<input id="fileupload" type="file" name="file" required />
+				</div> -->
+				<!-- <div class="form-group">
 					<div class="fileupload fileupload-new" data-provides="fileupload">
 						<span class="btn btn-default btn-file">
 							<span class="fileupload-new">Datei auswählen...</span>
 							<span class="fileupload-exists">Datei ändern...</span>
-							<input type="file" />
+							<input type="file" required />
 						</span>
 						<span class="fileupload-preview"></span>
 						<a href="#" class="close fileupload-exists" data-dismiss="fileupload" style="float: none">×</a>
 					</div>
-				</div>
+				</div>-->
 				<div class="form-group">
 					<div class="input-group">
 						<span class="input-group-addon"><i class="glyphicon glyphicon-search"></i></span>
