--- a/upload.html
+++ b/upload.html
@@ -82,24 +82,22 @@
 				<div class="form-group">
 					<input id="FileInputUploadArbeit" name="FileInputUploadArbeit[]" type="file" class="file-loading" required />
 				</div>
-				<!-- <div class="form-group">
-					<input id="fileupload" type="file" name="file" required />
-				</div> -->
-				<!-- <div class="form-group">
-					<div class="fileupload fileupload-new" data-provides="fileupload">
-						<span class="btn btn-default btn-file">
-							<span class="fileupload-new">Datei auswählen...</span>
-							<span class="fileupload-exists">Datei ändern...</span>
-							<input type="file" required />
-						</span>
-						<span class="fileupload-preview"></span>
-						<a href="#" class="close fileupload-exists" data-dismiss="fileupload" style="float: none">×</a>
-					</div>
-				</div>-->
 				<div class="form-group">
 					<div class="input-group">
 						<span class="input-group-addon"><i class="glyphicon glyphicon-search"></i></span>
-						<input class="form-control" id="schlagwoerter" name="schlagwoerter" placeholder="Schlagwörter" required />
+						<input class="form-control" id="schlagwort" name="schlagwort[]" placeholder="Schlagwort 1" required />
+						<span class="input-group-btn">
+							<button type="button" class="btn btn-success addButton"><i class="glyphicon glyphicon-plus"></i></button>
+						</span>
+					</div>
+				</div>
+				<div class="form-group hide" id="missingTemplate">
+					<div class="input-group">
+						<span class="input-group-addon"><i class="glyphicon glyphicon-search"></i></span>
+						<input class="form-control" id="schlagwort" name="schlagwort[]" placeholder="ein weiteres Schlagwort" />
+						<span class="input-group-btn">
+							<button type="button" class="btn btn-danger removeButton"><i class="glyphicon glyphicon-minus"></i></button>
+						</span>
 					</div>
 				</div>
 				<div class="form-group">
