--- a/html/login.html
+++ b/html/login.html
@@ -17,7 +17,7 @@
 			<h2><span class="glyphicon glyphicon-file"></span> StudienArbeitenPlattform - Login</h2>
 		</div>
 		<div class="center-block box-content">
-			<form method="post" action="./index.html" name="formLogin" id="formLogin" onsubmit="return login();">
+			<form method="post" action="./?upload" name="formLogin" id="formLogin" onsubmit="return login();">
 				<h3>Login</h3>
 				<div class="form-group">
 					<div class="input-group">
