--- a/html/upload.html
+++ b/html/upload.html
@@ -6,7 +6,7 @@
 		<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 		<script src="js/fileinput.min.js"></script> <!-- 4.4.3-5 -->
-		<script src="js/own.js"></script>
+		<script src="js/upload.js"></script>
 		<link rel="icon" href="img/icon.ico">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css">
