--- a/html/upload.html
+++ b/html/upload.html
@@ -29,7 +29,7 @@
 				</div>
 				<div class="form-group">
 					<div class="input-group">
-						<span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+						<span class="input-group-addon"><i class="glyphicon glyphicon-education"></i></span>
 						<select class="form-control" id="studiengang" name="studiengang" required>
 							<!-- value-Werte zu empfehlen aufgrund eventueller Sprachvielfalt (gleiche value für gleichen Studiengang) -->
 							<option value="">Studiengang...</option>
@@ -81,6 +81,18 @@
 					</div>
 				</div>
 				<div class="form-group">
+					<div class="input-group">
+						<span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+						<input class="form-control" id="dozent" name="dozent" placeholder="Dozent" required />
+					</div>
+				</div>
+				<div class="form-group">
+					<div class="input-group">
+						<span class="input-group-addon"><i class="glyphicon glyphicon-home"></i></span>
+						<input class="form-control" id="firma" name="firma" placeholder="Firma" required />
+					</div>
+				</div>
+				<div class="form-group">
 					<input id="FileInputUploadArbeit" name="FileInputUploadArbeit[]" type="file" class="file-loading" required />
 				</div>
 				<div class="form-group">
@@ -105,7 +117,7 @@
 				<div class="form-group">
 					<div class="input-group">
 						<span class="input-group-addon"><i class="glyphicon glyphicon-text-size"></i></span>
-						<textarea class="form-control" id="kurzfassung" name="kurzfassung" placeholder="Kurzfassung" rows="5"></textarea>
+						<textarea class="form-control" id="kurzfassung" name="kurzfassung" placeholder="Kurzfassung" rows="5" required></textarea>
 					</div>
 				</div>
 				<input type="hidden" id="idOfFile" name="idOfFile">
