grobe Übersicht Upload

--- a/html/upload.html
+++ b/html/upload.html
@@ -29,6 +29,12 @@
 				</div>
 				<div class="form-group">
 					<div class="input-group">
+						<span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+						<input class="form-control" id="student" name="student" placeholder="Student" required />
+					</div>
+				</div>
+				<div class="form-group">
+					<div class="input-group">
 						<span class="input-group-addon"><i class="glyphicon glyphicon-education"></i></span>
 						<select class="form-control" id="studiengang" name="studiengang" required>
 							<!-- value-Werte zu empfehlen aufgrund eventueller Sprachvielfalt (gleiche value für gleichen Studiengang) -->
