function change View for get-Paras

--- a/html/viewArbeiten.html
+++ b/html/viewArbeiten.html
@@ -39,6 +39,7 @@
 					<button class="btn btn-default btn-sm btn-block" value="Wirtschaftsinformatik">Wirtschaftsinformatik</button>
 				</div>
 				<div class="col-md-9">
+					<h2 id="headLineStudiengang"></h2>
 					<table class="table table-stripped table-hover table-bordered table-condensed">
 						<thead>
 							<tr>
