added Navigation for detailled View

--- a/html/viewArbeiten.html
+++ b/html/viewArbeiten.html
@@ -41,7 +41,7 @@
 				</div>
 				<div class="col-md-9">
 					<h2 id="headLineStudiengang"></h2>
-					<table class="table table-stripped table-hover table-bordered table-condensed">
+					<table class="table table-stripped table-hover table-bordered table-condensed" id="tableOverview">
 						<thead>
 							<tr>
 								<th>Titel</th>
@@ -56,6 +56,7 @@
 						</thead>
 						<tbody id="tableContent"></tbody>
 					</table>
+					
 				</div>
 			</div>
 		</div>
