--- a/html/viewArbeiten.html
+++ b/html/viewArbeiten.html
@@ -13,14 +13,13 @@
 		<link rel="stylesheet" href="css/own.css">
 	</head>
 	<body>
-		<div class="jumbotron center-block box-header" onclick="window.history.replaceState('', '', '?studiengang=');location.reload('.');" style="cursor: pointer;">
+		<div class="jumbotron center-block box-header" onclick="getAllArbeiten();changeFachbereich();" style="cursor: pointer;">
 			<!-- <img src="img/logo.png" width="100px" height="100px" /></span> -->
 			<h2><span class="glyphicon glyphicon-file"></span> StudienArbeitenPlattform</h2>
 		</div>
 		<div class="center-block box-content">
 			<div class="row">
 				<div class="col-md-3">
-					<button class="btn btn-default btn-sm btn-block" value="">Alle</button>
 					<button class="btn btn-default btn-sm btn-block" value="Bank">Bank</button>
 					<button class="btn btn-default btn-sm btn-block" value="Bauwesen">Bauwesen</button>
 					<button class="btn btn-default btn-sm btn-block" value="Dienstleistungsmanagement">Dienstleistungsmanagement</button>
@@ -56,7 +55,6 @@
 						</thead>
 						<tbody id="tableContent"></tbody>
 					</table>
-					
 				</div>
 			</div>
 		</div>
