updated detailled View

--- a/html/viewArbeiten.html
+++ b/html/viewArbeiten.html
@@ -55,6 +55,10 @@
 						</thead>
 						<tbody id="tableContent"></tbody>
 					</table>
+					<table class="table table-stripped table-hover table-bordered table-condensed" id="tableDetailledArbeit">
+						<thead></thead>
+						<tbody id="tableBodyDetailledArbeit"></tbody>
+					</table>
 				</div>
 			</div>
 		</div>
