backEnd for show Files, supports multiple files

--- a/html/upload.html
+++ b/html/upload.html
@@ -99,7 +99,7 @@
 					</div>
 				</div>
 				<div class="form-group">
-					<input id="FileInputUploadArbeit" name="FileInputUploadArbeit[]" type="file" class="file-loading" required />
+					<input id="FileInputUploadArbeit" name="FileInputUploadArbeit[]" type="file" class="file-loading" required multiple />
 				</div>
 				<div class="form-group">
 					<div class="input-group">
