added searchWords for tableSearch

--- a/html/upload.html
+++ b/html/upload.html
@@ -26,7 +26,7 @@
 			</div>
 		</div>
 		<div class="center-block box-content">
-			<form method="post" action="./php/uploadPDF.php" name="formUpload" id="formUpload" onsubmit="return upload();" enctype="multipart/form-data">
+			<form method="post" action="./php/uploadFiles.php" name="formUpload" id="formUpload" onsubmit="return upload();" enctype="multipart/form-data">
 				<h3>Hochladen von Arbeiten</h3>
 				<div class="form-group">
 					<div class="input-group">
