only 1 LoginPackage, added Admin-Acc

--- a/html/login.html
+++ b/html/login.html
@@ -5,6 +5,7 @@
 		<title>StArPl - Login</title>
 		<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+		<script src="js/general.js"></script>
 		<script src="js/login.js"></script>
 		<link rel="icon" href="img/icon.ico">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -17,7 +18,7 @@
 			<h2><span class="glyphicon glyphicon-file"></span> StudienArbeitenPlattform - Login</h2>
 		</div>
 		<div class="center-block box-content">
-			<form method="post" action="./?upload" name="formLogin" id="formLogin" onsubmit="return login();">
+			<form method="post" name="formLogin" id="formLogin" onsubmit="return login();">
 				<h3>Login</h3>
 				<div class="form-group">
 					<div class="input-group">
