--- a/html/upload.html
+++ b/html/upload.html
@@ -106,7 +106,7 @@
 					</div>
 				</div>
 				<div class="checkbox">
-					<label><input type="checkbox" id="sperrvermerk" name="sperrvermerk" onChange="changeSperrvermerk();" value="false">Sperrvermerk</label>
+					<label><input type="checkbox" id="sperrvermerk" name="sperrvermerk" onChange="changeSperrvermerk();" value="0">Sperrvermerk</label>
 				</div>
 				<div class="form-group" id="divFileInputUploadArbeit">
 					<input id="FileInputUploadArbeit" name="FileInputUploadArbeit[]" type="file" class="file-loading" required multiple />
