changed dozent to betreuer

--- a/html/upload.html
+++ b/html/upload.html
@@ -96,7 +96,7 @@
 				<div class="form-group">
 					<div class="input-group">
 						<span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-						<input class="form-control" id="dozent" name="dozent" placeholder="Dozent" required />
+						<input class="form-control" id="betreuer" name="betreuer" placeholder="Betreuer" required />
 					</div>
 				</div>
 				<div class="form-group">
