--- a/html/viewArbeiten.html
+++ b/html/viewArbeiten.html
@@ -53,7 +53,7 @@
 									<th>Sprache</th>
 									<th>Art der Arbeit</th>
 									<th>Jahrgang</th>
-									<th>Dozent</th>
+									<th>Betreuer</th>
 									<th>Firma</th>
 								</tr>
 							</thead>
