added Edit in Overview

--- a/html/viewArbeiten.html
+++ b/html/viewArbeiten.html
@@ -45,19 +45,8 @@
 					<h2 id="headLineStudiengang"></h2>
 					<div id="divTableOverview">
 						<table class="table table-stripped table-hover table-bordered table-condensed" id="tableOverview">
-							<thead>
-								<tr>
-									<th>Titel</th>
-									<th>Student</th>
-									<th>Studiengang</th>
-									<th>Sprache</th>
-									<th>Art der Arbeit</th>
-									<th>Jahrgang</th>
-									<th>Betreuer</th>
-									<th>Firma</th>
-								</tr>
-							</thead>
-							<tbody id="tableContent"></tbody>
+							<thead id="tableHeader"></thead>
+							<tbody></tbody>
 						</table>
 					</div>
 					<table class="table table-stripped table-hover table-bordered table-condensed" id="tableDetailledArbeit">
