--- a/html/viewArbeiten.html
+++ b/html/viewArbeiten.html
@@ -19,6 +19,13 @@
 		<div class="jumbotron center-block box-header" onclick="getAllArbeiten();changeFachbereich();" style="cursor: pointer;">
 			<!-- <img src="img/logo.png" width="100px" height="100px" /></span> -->
 			<h2><span class="glyphicon glyphicon-file"></span> StudienArbeitenPlattform</h2>
+			<div class="text-right" id="divLogoutButton">
+				<form method="post" action="">
+					<button type="submit" name="logout" class="btn btn-danger">
+						<span class="glyphicon glyphicon-log-out"></span> Abmelden
+					</button>
+				</form>
+			</div>
 		</div>
 		<div class="center-block box-content">
 			<div class="row">
