--- a/html/login.html
+++ b/html/login.html
@@ -32,7 +32,7 @@
 						<input class="form-control" type="password" id="Password" name="Password" placeholder="Passwort" required />
 					</div>
 				</div>
-				<div id='formLogin-divError' class="alert alert-danger hide">
+				<div id='formLogin-divError' class="alert alert-danger">
 				</div>
 				<div class="form-group">
 					<button type="submit" class="btn btn-success">
