--- a/html/upload.html
+++ b/html/upload.html
@@ -136,7 +136,7 @@
 						<textarea class="form-control" id="kurzfassung" name="kurzfassung" placeholder="Kurzfassung" rows="5" required></textarea>
 					</div>
 				</div>
-				<input type="hidden" id="idOfFile" name="idOfFile">
+				<input type="hidden" id="idOfArbeit" name="idOfArbeit">
 				<!-- <div id='formUpload-divError' class="alert alert-danger hide"> -->
 				<!-- </div> -->
 				<div class="form-group">
