--- a/html/viewArbeiten.html
+++ b/html/viewArbeiten.html
@@ -69,6 +69,14 @@
 							<span class="glyphicon glyphicon-pencil"></span> Bearbeiten
 						</button>
 					</div>
+					<div class="form-group text-right" id="leaveButtons">
+						<button onclick="resetArbeit();" class="btn btn-danger">
+							<span class="glyphicon glyphicon-remove"></span> Abbrechen
+						</button>
+						<button onclick="saveArbeit();" class="btn btn-success">
+							<span class="glyphicon glyphicon-ok"></span> Speichern
+						</button>
+					</div>
 				</div>
 			</div>
 		</div>
