--- a/html/viewArbeiten.html
+++ b/html/viewArbeiten.html
@@ -56,25 +56,27 @@
 							<tbody></tbody>
 						</table>
 					</div>
-					<table class="table table-stripped table-hover table-bordered table-condensed" id="tableDetailledArbeit">
-						<thead></thead>
-						<tbody id="tableBodyDetailledArbeit"></tbody>
-						<tbody id="tableBodyDetailledArbeitEdit"></tbody>
-					</table>
+					<form method="post" name="formSaveArbeit" id="formSaveArbeit" onsubmit="return saveArbeit();" enctype="multipart/form-data">
+						<table class="table table-stripped table-hover table-bordered table-condensed" id="tableDetailledArbeit">
+							<thead></thead>
+							<tbody id="tableBodyDetailledArbeit"></tbody>
+							<tbody id="tableBodyDetailledArbeitEdit"></tbody>
+						</table>
+						<div class="form-group text-right" id="leaveButtons">
+							<button onclick="return resetArbeit();" class="btn btn-danger">
+								<span class="glyphicon glyphicon-remove"></span> Abbrechen
+							</button>
+							<button type="submit" class="btn btn-success">
+								<span class="glyphicon glyphicon-ok"></span> Speichern
+							</button>
+						</div>
+					</form>
 					<div class="form-group text-right" id="editButtons">
 						<button onclick="deleteArbeit();" class="btn btn-danger">
 							<span class="glyphicon glyphicon-remove"></span> Löschen
 						</button>
 						<button onclick="editArbeit();" class="btn btn-primary">
 							<span class="glyphicon glyphicon-pencil"></span> Bearbeiten
-						</button>
-					</div>
-					<div class="form-group text-right" id="leaveButtons">
-						<button onclick="resetArbeit();" class="btn btn-danger">
-							<span class="glyphicon glyphicon-remove"></span> Abbrechen
-						</button>
-						<button onclick="saveArbeit();" class="btn btn-success">
-							<span class="glyphicon glyphicon-ok"></span> Speichern
 						</button>
 					</div>
 				</div>
