--- a/html/upload.html
+++ b/html/upload.html
@@ -26,7 +26,7 @@
 			</div>
 		</div>
 		<div class="center-block box-content">
-			<form method="post" action="./php/uploadFiles.php" name="formUpload" id="formUpload" onsubmit="return upload();" enctype="multipart/form-data">
+			<form method="post" action="." name="formUpload" id="formUpload" onsubmit="return upload();" enctype="multipart/form-data">
 				<h3>Hochladen von Arbeiten</h3>
 				<div class="form-group">
 					<div class="input-group">
@@ -136,7 +136,6 @@
 						<textarea class="form-control" id="kurzfassung" name="kurzfassung" placeholder="Kurzfassung" rows="5" required></textarea>
 					</div>
 				</div>
-				<input type="hidden" id="idOfArbeit" name="idOfArbeit">
 				<!-- <div id='formUpload-divError' class="alert alert-danger hide"> -->
 				<!-- </div> -->
 				<div class="form-group">
