--- a/html/upload.html
+++ b/html/upload.html
@@ -19,6 +19,9 @@
 			<h2><span class="glyphicon glyphicon-file"></span> StudienArbeitenPlattform - Hochladen</h2>
 			<div class="text-right">
 				<form method="post" action="">
+					<a href="./?edit" class="btn btn-default">
+						<span class="glyphicon glyphicon-pencil"></span> Bearbeiten
+					</a>
 					<button type="submit" name="logout" class="btn btn-danger">
 						<span class="glyphicon glyphicon-log-out"></span> Abmelden
 					</button>
