Create new temporary user in Database

--- a/html/viewArbeiten.html
+++ b/html/viewArbeiten.html
@@ -38,7 +38,7 @@
 		<div class="center-block box-content">
 			<div class="row">
 				<div class="col-md-3">
-					<button class="btn btn-default btn-sm btn-block" value="Bank">Bank</button>
+					<!-- <button class="btn btn-default btn-sm btn-block" value="Bank">Bank</button>
 					<button class="btn btn-default btn-sm btn-block" value="Bauwesen">Bauwesen</button>
 					<button class="btn btn-default btn-sm btn-block" value="Dienstleistungsmanagement">Dienstleistungsmanagement</button>
 					<button class="btn btn-default btn-sm btn-block" value="Elektrotechnik">Elektrotechnik</button>
@@ -54,7 +54,29 @@
 					<button class="btn btn-default btn-sm btn-block" value="Steuern/Prüfungswesen">Steuern/Prüfungswesen</button>
 					<button class="btn btn-default btn-sm btn-block" value="Tourismusbetriebswirtschaft">Tourismusbetriebswirtschaft</button>
 					<button class="btn btn-default btn-sm btn-block" value="Versicherung">Versicherung</button>
-					<button class="btn btn-default btn-sm btn-block" value="Wirtschaftsinformatik">Wirtschaftsinformatik</button>
+					<button class="btn btn-default btn-sm btn-block" value="Wirtschaftsinformatik">Wirtschaftsinformatik</button> -->
+
+					<ul class="nav nav-pills nav-stacked">
+							<li><a>Bank</a></li>
+							<li><a>Bauwesen</a></li>
+							<li><a>Dienstleistungsmanagement</a></li>
+							<li><a>Elektrotechnik</a></li>
+							<li><a>Facility Management</a></li>
+							<li><a>Handel</a></li>
+							<li><a>IBA</a></li>
+							<li><a>Immobilienwirtschaft</a></li>
+							<li><a>Industrie</a></li>
+							<li><a>Informatik</a></li>
+							<li><a>Maschinenbau</a></li>
+							<li><a>PPM</a></li>
+							<li><a>Spedition/Logistik</a></li>
+							<li><a>Steuern/Prüfungswesen</a></li>
+							<li><a>Tourismusbetriebswirtschaft</a></li>
+							<li><a>Versicherung</a></li>
+							<li><a>Wirtschaftsinformatik</a></li>
+					</ul>
+
+
 				</div>
 				<div class="col-md-9">
 					<h2 id="headLineStudiengang"></h2>
