--- a/html/create-new-tempuser.html
+++ b/html/create-new-tempuser.html
@@ -5,6 +5,8 @@
 		<title>StArPl - Create User</title>
 		<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+		<script src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
+		<script src="https://cdn.datatables.net/1.10.16/js/dataTables.bootstrap.min.js"></script>
 		<script src="js/general.js"></script>
 		<script src="js/createUsers.js"></script>
 		<link rel="icon" href="img/icon.ico">
@@ -24,18 +26,22 @@
       </div>
     </div>
     <div class="center-block box-content">
-      <h3>Temporären Studenten-Account erstellen</h3>
+			<table class="table table-stripped table-hover table-bordered table-condensed" id="tableExistingUsers">
+				<thead id="tableHeader"></thead>
+				<tbody></tbody>
+			</table>
+			<h3>Temporären Studenten-Account erstellen</h3>
         <form method="post" action="." name="formCreateUsers" id="formCreateUsers" onsubmit="return createUser();" enctype="multipart/form-data" >
 					<div class="form-group">
             <div class="input-group">
 							<span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-							<input class="form-control"  id="username" name="username" placeholder="Name"  required />
+							<input class="form-control"  data-toggle="tooltip" data-placement="top" title="Bitte geben Sie hier die Studenten-Kennung ein." id="username" name="username" placeholder="Name"  required />
             </div>
           </div>
           <div class="form-group">
             <div class="input-group">
               <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
-              <input class="form-control" type="date" id="datum_gueltig" name="datum_gueltig"  required />
+              <input class="form-control" type="date" data-toggle="tooltip" data-placement="top" title="Bitte geben sie einen Zeitraum an" id="datum_gueltig" name="datum_gueltig"  required />
               <span class="input-group-addon"><i class="glyphicon glyphicon-time"></i></span>
               <input class="form-control" type="time" id="time_gueltig" name="time_gueltig" value="00:00"  required />
             </div>
