--- a/html/upload.html
+++ b/html/upload.html
@@ -142,6 +142,7 @@
 				<!-- <div id='formUpload-divError' class="alert alert-danger hide"> -->
 				<!-- </div> -->
 				<div class="form-group">
+					<select id="selectDocents" name="docentId" ></select>
 					<button type="submit" class="btn btn-success">
 						<span class="glyphicon glyphicon-upload"></span> Hochladen
 					</button>
