Add ability to release documents created by temporary Accounts

--- a/html/viewArbeiten.html
+++ b/html/viewArbeiten.html
@@ -109,6 +109,11 @@
 							<span class="glyphicon glyphicon-pencil"></span> Bearbeiten
 						</button>
 					</div>
+					<div class="form-group text-right hidden" id="buttonPublishDoc">
+						<button onclick="alert();" class="btn btn-success">
+							<span class="glyphicon glyphicon-upload"></span> Freischalten
+						</button>
+					</div>
 				</div>
 			</div>
 		</div>
