--- a/html/viewArbeiten.html
+++ b/html/viewArbeiten.html
@@ -110,8 +110,8 @@
 						</button>
 					</div>
 					<div class="form-group text-right hidden" id="buttonPublishDoc">
-						<button onclick="alert();" class="btn btn-success">
-							<span class="glyphicon glyphicon-upload"></span> Freischalten
+						<button class="btn btn-success">
+							<span class="glyphicon glyphicon-ok"></span> Freischalten
 						</button>
 					</div>
 				</div>
