--- a/html/viewArbeiten.html
+++ b/html/viewArbeiten.html
@@ -26,6 +26,14 @@
 			</div>
 			<div class="text-right" id="divLogoutButton">
 				<form method="post" action="">
+					<span id="divEditButtons" class="collapse">
+						<a href="./?create" class="btn btn-default">
+							<span class="glyphicon glyphicon-user"></span> Benutzer verwalten
+						</a>
+						<a href="./?edit" id="buttonEdit" class="btn btn-default">
+							<span class="glyphicon glyphicon-pencil"></span> Bearbeiten
+						</a>
+					</span>
 					<a href="./?upload" class="btn btn-default">
 						<span class="glyphicon glyphicon-upload"></span> Hochladen
 					</a>
@@ -74,7 +82,7 @@
 							<li><a>Tourismusbetriebswirtschaft</a></li>
 							<li><a>Versicherung</a></li>
 							<li><a>Wirtschaftsinformatik</a></li>
-					</ul>
+						</ul>
 
 
 				</div>
