Adjust buttons for action by user role and refactor

--- a/html/create-new-tempuser.html
+++ b/html/create-new-tempuser.html
@@ -15,7 +15,7 @@
 		<link rel="stylesheet" href="css/own.css">
 	</head>
   <body>
-    <div class="jumbotron center-block box-header" onclick="location.reload();" style="cursor: pointer;">
+    <div class="jumbotron center-block box-header" onclick="//location.reload();" style="cursor: pointer;">
       <h2><span class="glyphicon glyphicon-file"></span> StudienArbeitenPlattform - Temporären Account erstellen</h2>
       <div class="text-right">
         <form method="post" action=''>
