--- a/html/create-new-tempuser.html
+++ b/html/create-new-tempuser.html
@@ -31,6 +31,20 @@
         </form>
       </div>
     </div>
+		<!-- Nav -->
+				<nav class="navbar starpl-top-nav affix-top" data-spy="affix" data-offset-top="113">
+					<div class="container">
+						<ul class="nav navbar-nav" id="inner-starpl-top-nav">
+							<li class="active"><a href="#">StArPl</a></li>
+							<li class="logoutHidden collapse"><a href="./?create"><span class="glyphicon glyphicon-user"></span>Benutzer verwalten</a></li>
+							<li class="logoutHidden collapse" id="editLink"><a href="./?edit"><span class="glyphicon glyphicon-pencil"></span> Bearbeiten </a></li>
+							<!-- <li class="logoutHidden uploadLink collapse"><a href="./?upload"><span class="glyphicon glyphicon-upload"></span> Hochladen </a></li> -->
+							<!-- <li id="loginLink" class="collapse"><a href="./?upload"><span class="glyphicon glyphicon-log-in"></span> Login </a></li> -->
+							<li id="logoutLink" class="collapse" onclick="$('#logoutButton').submit()"><a><span class="glyphicon glyphicon-log-out"></span> Abmelden </a></li>
+						</ul>
+					</div>
+				</nav>
+		<!-- Nav end -->
     <div class="center-block box-content">
 			<table class="table table-stripped table-hover table-bordered table-condensed" id="tableExistingUsers">
 				<thead id="tableHeader"></thead>
